fix: gdh-1169 | removed gap from card as content already has padding-top

--- a/components/DynamicContent/src/index.scss
+++ b/components/DynamicContent/src/index.scss
@@ -32,7 +32,6 @@
 
   display: flex;
   flex-direction: column;
-  gap: var(--denhaag-dynamic-content-card-gap);
   position: relative;
 
   @media (prefers-reduced-motion: reduce) {
